test/types/enum/sungeun/cast_pos_start_oor_1.good
cast_pos_start_oor_1.chpl:2: error: enum cast out of bounds
