test/types/enum/sungeun/cast_pos_start_oor_1.chpl
enum blah { a=23, b, c, d, e, f, g, h, i, j, k, l, m, n, o, p, q, r, s, t, u, v, w, x, y, z };
var b = 1:blah;

writeln(b);
